add base info to contact page

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,8 +1,6 @@
 $white: #FFFFFF;
 $white-light: #F8F8F8;
 $black: #000000;
-$black-light: #131826;
-$black-light1: #04092E;
 
 $primary: #06BCC2;
 $primary-rgb: 6, 188, 194;
@@ -20,9 +18,14 @@ $warning: #df6454;
 $warning-rgb: 223, 100, 84;
 $warning-hover: #c84635;
 
+$dark-grey: #22222a;
 $grey: #606d72;
 $light-grey: #839399;
 $middle-grey: #727D81;
+
+$beige1: #E5E4DE;
+$beige2: #e2e7e2;
+$beige3: #c4b7ba;
 
 $shadow-input: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 $shadow-button: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
@@ -30,3 +33,4 @@ $shadow-selector: 0px 4px 10px rgba(255, 255, 255, 0.2);
 $shadow-modal: 0px 4px 20px 0 rgba(0, 0, 0, 0.25);
 
 $transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 0.1) 0ms;
+$duration: .7s;
