--- a/src/pages/MainPage/MainPage.scss
+++ b/src/pages/MainPage/MainPage.scss
@@ -2,32 +2,34 @@
 @import 'assets/styles/mixin';
 
 .main-page {
-  @include flexColumnNoWrap(0, center, space-between);
   width: 100%;
   height: 100vh;
+  padding: 40px 0;
 
+  .bg-author {
+    left: 50%;
+    transform: translateX(-50%);
+  }
 
   &__container {
-    @include flexColumnNoWrap(24px, center, flex-start);
-    width: 100vw;
-    height: 100vh;
+    @include flexColumnNoWrap(40px, center, flex-end);
+    width: 100%;
+    height: 100%;
     margin: auto;
-    padding: 28px;
+    padding: 0 40px;
+  }
+
+  &__content {
+    width: 100%;
+    flex: 1 1 auto;
     overflow-y: auto;
-    overflow-x: hidden;
     @include scroll;
-  }
-
-  &__title {
-    @include fontMedium(18px, 32px);
-    color: $grey;
-  }
-
-  &__form {
-    @include flexColumnNoWrap(12px, center, flex-start);
-    background-color: rgba($color: $light-grey, $alpha: 0.5);
-    padding: 12px 36px;
-    border-radius: 8px;
-    width: 30%;
+    -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 0) 0%,
+        rgba(0, 0, 0, 0.24) 0.099%,
+        rgba(0, 0, 0, 0.9) 1%,
+        rgba(0, 0, 0, 1),
+        rgba(0, 0, 0, 0.9) 99%,
+        rgba(0, 0, 0, 0.24) 99.99%,
+        rgba(0, 0, 0, 0) 100%);
   }
 }
