--- a/src/components/RecentWorkList/RecentWorkItem/RecentWorkItem.scss
+++ b/src/components/RecentWorkList/RecentWorkItem/RecentWorkItem.scss
@@ -2,5 +2,62 @@
 @import 'assets/styles/mixin';
 
 .recent-work-item {
+  position: relative;
+  width: 320px;
+  height: 320px;
 
+  &__button {
+    background-color: rgba($color: $secondary, $alpha: 0.8);
+    border-radius: 16px;
+    color: $white;
+    cursor: pointer;
+    transition: $transition;
+    width: 100%;
+    height: 100%;
+    position: relative;
+
+    &:before {
+      @include fontMedium(16px, 24px);
+      content: 'Click to see more...';
+      position: absolute;
+      display: none;
+      left: 50%;
+      top: 55%;
+      transform: translate(-50%, -50%);
+      width: fit-content;
+      height: fit-content;
+      background-color: $white;
+      border-radius: 4px;
+      padding: 2px 8px;
+      color: $secondary;
+      white-space: nowrap;
+      transition: $transition;
+    }
+
+    &:hover {
+      background-color: rgba($color: $secondary, $alpha: 0.5);
+
+      &:before {
+        display: block;
+      }
+    }
+  }
+
+  &__cover {
+    border-radius: 16px;
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+    z-index: -1;
+  }
+
+  &__title {
+    @include fontSemibold(24px, 32px);
+    position: absolute;
+    color: $white;
+    white-space: nowrap;
+    left: 50%;
+    top: 45%;
+    transform: translate(-50%, -50%);
+  }
 }
