--- a/src/components/RecentWorkList/RecentWorkList.scss
+++ b/src/components/RecentWorkList/RecentWorkList.scss
@@ -6,4 +6,9 @@
     @include fontSemibold(36px, 48px);
     color: $secondary;
   }
+
+  &__list {
+    padding: 40px 0;
+    @include flexRowWrap(32px, center, center);
+  }
 }
