--- a/src/components/Inputs/FormTextarea/FormTextarea.scss
+++ b/src/components/Inputs/FormTextarea/FormTextarea.scss
@@ -26,6 +26,7 @@
     border: 1px solid $primary;
     background-color: transparent;
     outline: none;
+    min-height: 160px;
 
     &-wrapper {
       position: relative;
