fix styles for Recent Work page

--- a/src/components/BgAuthor/BgAuthor.scss
+++ b/src/components/BgAuthor/BgAuthor.scss
@@ -11,6 +11,7 @@
     &-text {
       @include fontRegular(12px, 21px);
       color: $middle-grey;
+      white-space: nowrap;
     }
 
     &-link {
