add base info and layout to MySkills page

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -9,6 +9,7 @@ $primary-hover: #09B2BB;
 $block1: #ECDDC4;
 $block2: #df6454;
 $block3: #13809B;
+$block4: #00586e;
 
 $secondary: #343540;
 $secondary-rgb: 52, 53, 64;
