--- a/src/components/MySkillsList/MySkillsList.scss
+++ b/src/components/MySkillsList/MySkillsList.scss
@@ -6,4 +6,13 @@
     @include fontSemibold(36px, 48px);
     color: $secondary;
   }
+
+  &__list {
+    padding: 40px 0;
+    @include flexColumnNoWrap(24px);
+
+    &-item {
+      width: 100%;
+    }
+  }
 }
