--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -9,7 +9,6 @@ $primary-hover: #09B2BB;
 $block1: #ECDDC4;
 $block2: #df6454;
 $block3: #13809B;
-$block4: #00586e;
 
 $secondary: #343540;
 $secondary-rgb: 52, 53, 64;
@@ -28,10 +27,13 @@ $beige1: #E5E4DE;
 $beige2: #e2e7e2;
 $beige3: #c4b7ba;
 
-$shadow-input: 0 0 4px 0 rgba(0, 0, 0, 0.1);
-$shadow-button: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
-$shadow-selector: 0px 4px 10px rgba(255, 255, 255, 0.2);
-$shadow-modal: 0px 4px 20px 0 rgba(0, 0, 0, 0.25);
+$cyan900: #065666;
+$cyan800: #086F83;
+$cyan700: #0987A0;
+$cyan600: #00A3C4;
+$cyan500: #00B5D8;
+
+$shadow: 0px 4px 20px 0 rgba(0, 0, 0, 0.25);
 
 $transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 0.1) 0ms;
 $duration: .7s;
