--- a/src/components/MySkillsList/MainSecondarySkills/MainSecondarySkills.scss
+++ b/src/components/MySkillsList/MainSecondarySkills/MainSecondarySkills.scss
@@ -6,18 +6,30 @@
   width: 75%;
   margin: 0 auto;
   padding: 12px 24px;
-  border: 2px solid $block3;
+  border: 2px solid $cyan600;
   border-radius: 24px;
-  background-color: rgba($color: $block3, $alpha: 0.2);
+  background-color: rgba($color: $cyan600, $alpha: 0.2);
   transition: $transition;
-  
+
+  @media screen and (max-width: 1024px) {
+    width: 80%;
+  }
+
+  @media screen and (max-width: 500px) {
+    width: 90%;
+  }
+
   &:hover {
     scale: 1.01;
-    box-shadow: $shadow-modal;
+    box-shadow: $shadow;
   }
 
   &__info {
     @include flexRowNoWrap(8px);
+
+    &:hover {
+      filter: drop-shadow(0 0 4px $beige3);
+    }
 
     &-icon {
       width: 24px;
@@ -25,8 +37,12 @@
     }
 
     &-title {
-      @include fontMedium(24px, 32px);
+      @include fontSemibold(24px, 32px);
       color: $secondary-hover;
+
+      @media screen and (max-width: 500px) {
+        @include fontSemibold(20px, 28px);
+      }
     }
   }
 
@@ -35,22 +51,38 @@
     padding: 8px 0;
     width: 100%;
 
+    @media screen and (max-width: 850px) {
+      @include flexColumnNoWrap(16px, flex-start, center);
+    }
+
     &-item {
       width: 30%;
       margin: 0 auto;
       @include flexColumnWrap(8px, center, flex-start);
 
+      @media screen and (max-width: 850px) {
+        width: 100%;
+      }
+
       .skills-group {
         @include flexRowNoWrap(4px);
 
-        &__icon {
-          width: 16px;
-          height: 16px;
+        &:hover {
+          filter: drop-shadow(0 0 4px $beige3);
         }
-    
+
+        &__icon {
+          width: 18px;
+          height: 18px;
+        }
+
         &__title {
-          @include fontMedium(16px, 24px);
+          @include fontSemibold(20px, 28px);
           color: $secondary-hover;
+
+          @media screen and (max-width: 500px) {
+            @include fontSemibold(16px, 22px);
+          }
         }
 
         &__list {
