--- a/src/components/MySkillsList/OtherSkills/OtherSkills.scss
+++ b/src/components/MySkillsList/OtherSkills/OtherSkills.scss
@@ -6,18 +6,26 @@
   width: 95%;
   margin: 0 auto;
   padding: 12px 24px;
-  border: 2px solid $block4;
+  border: 2px solid $cyan500;
   border-radius: 24px;
-  background-color: rgba($color: $block4, $alpha: 0.2);
+  background-color: rgba($color: $cyan500, $alpha: 0.2);
   transition: $transition;
+
+  @media screen and (max-width: 500px) {
+    width: 98%;
+  }
   
   &:hover {
     scale: 1.01;
-    box-shadow: $shadow-modal;
+    box-shadow: $shadow;
   }
 
   &__info {
     @include flexRowNoWrap(8px);
+
+    &:hover {
+      filter: drop-shadow(0 0 4px $beige3);
+    }
 
     &-icon {
       width: 24px;
@@ -25,8 +33,12 @@
     }
 
     &-title {
-      @include fontMedium(24px, 32px);
+      @include fontSemibold(24px, 32px);
       color: $secondary-hover;
+
+      @media screen and (max-width: 500px) {
+        @include fontSemibold(20px, 28px);
+      }
     }
   }
 
