--- a/src/assets/styles/_mixin.scss
+++ b/src/assets/styles/_mixin.scss
@@ -67,14 +67,15 @@ $semibold: 600;
 @mixin scroll {
   &::-webkit-scrollbar {
     width: 8px;
+    height: 8px;
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: rgba($color: $secondary, $alpha: 0.5);
+    background-color: rgba($color: $primary, $alpha: 0.5);
     border-radius: 4px;
 
     &:hover {
-      background-color: rgba($color: $secondary, $alpha: 0.8);
+      background-color: rgba($color: $primary, $alpha: 0.8);
     }
   }
 
