--- a/src/components/Resume/Resume.scss
+++ b/src/components/Resume/Resume.scss
@@ -6,4 +6,88 @@
     @include fontSemibold(36px, 48px);
     color: $secondary;
   }
+
+  &__container {
+    @include flexColumnNoWrap(24px);
+    padding: 24px 40px;
+    border-radius: 4px;
+    box-shadow: $shadow;
+    background-color: $white;
+    margin: 40px 16px;
+
+    @media screen and (max-width: 1120px) {
+      padding: 24px;
+    }
+
+    @media screen and (max-width: 520px) {
+      @include flexColumnNoWrap(12px);
+      padding: 24px 16px;
+      margin: 32px 0;
+    }
+  }
+
+  &__block {
+    @include flexColumnNoWrap(0, flex-start);
+    width: 100%;
+
+    &-title {
+      @include flexRowNoWrap(24px, flex-start);
+      @include fontMedium(24px, 32px);
+      color: $secondary;
+      width: 100%;
+
+      @media screen and (max-width: 520px) {
+        @include fontMedium(20px, 28px);
+        @include flexRowNoWrap(8px, flex-start);
+      }
+
+      &-hr {
+        width: 100%;
+        height: 1px;
+        background-color: $secondary;
+        margin: auto 0;
+      }
+
+      &-text {
+        white-space: nowrap;
+        text-transform: uppercase;
+        text-align: center;
+
+        @media screen and (max-width: 520px) {
+          white-space: normal;
+        }
+      }
+    }
+
+    &-content {
+      width: 100%;
+      padding: 40px;
+
+      @media screen and (max-width: 1120px) {
+        padding: 24px;
+      }
+
+      @media screen and (max-width: 520px) {
+        padding: 24px 0;
+      }
+
+      &-text {
+        @include fontRegular(16px, 24px);
+        color: $grey;
+      }
+
+      &-list {
+        @include flexRowWrap(24px, flex-start, space-between);
+        @include fontRegular(16px, 24px);
+        list-style: circle;
+        margin-left: 16px;
+        color: $grey;
+        width: 100%;
+
+        @media screen and (max-width: 768px) {
+          @include flexColumnNoWrap(8px, flex-start, flex-start);
+        }
+      }
+    }
+  }
 }
