--- a/src/components/Resume/MainStack/MainStack.scss
+++ b/src/components/Resume/MainStack/MainStack.scss
@@ -2,9 +2,8 @@
 @import 'assets/styles/mixin';
 
 .main-stack {
-  @include flexRowWrap(0, flex-start);
+  @include flexRowWrap(40px, flex-start);
   row-gap: 16px;
-  column-gap: 40px;
   width: 100%;
 
   @media screen and (max-width: 1120px) {
