--- a/src/components/GetInTouch/GetInTouch.scss
+++ b/src/components/GetInTouch/GetInTouch.scss
@@ -11,6 +11,10 @@
     height: 100%;
     padding: 0 24px;
     margin: 0 auto;
+
+    @media screen and (max-width: 1024px) {
+      width: 100%;
+    }
   }
 
   &__title {
@@ -28,19 +32,39 @@
     height: 100%;
     flex-grow: 2;
 
+    @media screen and (max-width: 675px) {
+      padding: 24px;
+    }
+
+    @media screen and (max-width: 360px) {
+      padding: 16px;
+    }
+
     &--top {
       @include flexRowNoWrap(24px, flex-start, flex-start);
       width: 100%;
+
+      @media screen and (max-width: 500px) {
+        @include flexRowWrap(16px, flex-start, flex-start);
+      }
     }
 
     &--bottom {
       @include flexRowNoWrap(24px, flex-start, space-between);
       width: 100%;
       margin-top: auto;
+
+      @media screen and (max-width: 675px) {
+        @include flexRowWrap(16px);
+      }
     }
 
     .button {
       margin-left: auto;
+
+      @media screen and (max-width: 675px) {
+        margin-left: 0;
+      }
     }
   }
 
@@ -50,6 +74,12 @@
     margin-top: auto;
     @include flexRowNoWrap(24px, flex-start, flex-start);
     padding: 12px;
+
+    @media screen and (max-width: 675px) {
+      @include flexRowNoWrap(16px);
+      padding: 8px;
+      padding-top: 0;
+    }
   }
 
   &__item {
@@ -71,12 +101,20 @@
 }
 
 .contact-info {
-  @include flexRowNoWrap(16px, center, space-between);
+  @include flexRowNoWrap(16px, flex-start, space-between);
   width: 100%;
+
+  @media screen and (max-width: 960px) {
+    @include flexRowWrap(16px, flex-start, flex-start);
+  }
 
   &__description {
     @include fontRegular(18px, 24px);
     color: $secondary;
+
+    @media screen and (max-width: 1024px) {
+      @include fontRegular(16px, 22px);
+    }
   }
 
   &__icon {
@@ -88,22 +126,45 @@
   &__main {
     @include flexRowNoWrap(24px, flex-start, flex-start);
 
+    @media screen and (max-width: 675px) {
+      @include flexRowWrap(16px, flex-start, flex-start);
+    }
+
+    &-icon {
+      width: 48px;
+      height: 48px;
+      padding: 12px;
+      color: $secondary;
+      border: 1px solid $primary;
+      border-radius: 50%;
+      background: rgba($color: $primary, $alpha: 0.3);
+
+      @media screen and (max-width: 675px) {
+        padding: 8px;
+        width: 40px;
+        height: 40px;
+      }
+    }
+
     &-location {
       @include flexRowNoWrap(16px, center, flex-start);
       width: 100%;
 
-      &-icon {
-        width: 48px;
-        height: 48px;
-        padding: 12px;
-        color: $secondary;
-        border: 1px solid $primary;
-        border-radius: 50%;
-        background: rgba($color: $primary, $alpha: 0.3);
+      @media screen and (max-width: 675px) {
+        @include flexRowNoWrap(8px, center, flex-start);
+      }
+
+      @media screen and (max-width: 360px) {
+        @include flexRowNoWrap(4px, center, flex-start);
       }
 
       &-text {
         font-weight: 600;
+        white-space: nowrap;
+
+        @media screen and (max-width: 360px) {
+          font-size: 14px;
+        }
       }
     }
 
@@ -111,8 +172,20 @@
       @include flexRowNoWrap(16px, center, flex-start);
       width: 100%;
 
+      @media screen and (max-width: 675px) {
+        @include flexRowNoWrap(8px, center, flex-start);
+      }
+
+      @media screen and (max-width: 360px) {
+        @include flexRowNoWrap(4px, center, flex-start);
+      }
+
       &-text {
         font-weight: 600;
+
+        @media screen and (max-width: 360px) {
+          font-size: 14px;
+        }
       }
     }
   }
