add my cv to Resume page

--- a/src/components/Resume/Resume.scss
+++ b/src/components/Resume/Resume.scss
@@ -2,6 +2,16 @@
 @import 'assets/styles/mixin';
 
 .resume {
+  &__header {
+    @include flexRowWrap(24px, flex-start, space-between);
+    width: 100%;
+    padding: 8px 16px 0 16px;
+
+    @media screen and (max-width: 520px) {
+      padding: 8px 0 0;
+    }
+  }
+
   &__title {
     @include fontSemibold(36px, 48px);
     color: $secondary;
