--- a/src/components/RecentWorkList/RecentWorkModal/RecentWorkModal.scss
+++ b/src/components/RecentWorkList/RecentWorkModal/RecentWorkModal.scss
@@ -1,7 +1,7 @@
 @import 'assets/styles/variables';
 @import 'assets/styles/mixin';
 
-.recent-work-full-info {
+.recent-work-modal {
   &__title {
     @include fontSemibold(30px, 42px);
     color: $secondary;
